argocd/todofiber-azurekv/pgamind4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4-service
spec:
  selector:
    app: pgadmin4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
