argocd/todofiber-azurekv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todofiber
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /


spec:
  ingressClassName: nginx
  rules:
    - host: somehost.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todofiber-service
                port:
                  number: 3000
    
     
       
         

    # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - somehost.domain.com
      secretName: ingress-tls
